# visual_servo_tracking_matlab

./: .gitignore  .gitmodules  README.md
assets/: cameraParams.mat
matlab/: plan.md  report.md
matlab/assets/report/: analysis_summary.md
matlab/src/: t1_virtual_calibration.m
mujoco/: ASSETS.md  README.md  plan.md  pyproject.toml
mujoco/src/mujoco_servo/: __init__.py  __main__.py  app.py  camera.py  cli.py  config.py  control.py  geometry.py  image_features.py  math_utils.py  perception.py  rendering.py  robot.py  runtime.py  scene.py  startup.py  targets.py  types.py  viewer.py
mujoco/tests/: test_charuco.py  test_control.py  test_control_and_perception.py  test_geometry.py  test_live_camera.py  test_perception.py  test_perception_dtype.py  test_rendering.py  test_runtime.py  test_scene.py  test_scene_and_targets.py  test_startup.py  test_viewer.py
src/: add_status_badge.m  adj_transform.m  apply_axes_theme.m  apply_world_view.m  backproject_to_plane.m  calibrate_charuco_images.m  charuco_board_asset.m  checkerboard_points.m  config.m  detect_target.m  dls_solve.m  draw_camera_frame.m  ensure_dir.m  extract_intrinsics.m  live_camera_calibration.m  load_camera_params.m  lookat_tform.m  main.m  normalize_run_mode.m  open_video_writer.m  pre_capture_pause.m  project_points.m  real_camera_charuco_observation.m  real_camera_tracking.m  render_camera_view.m  run_charuco_board_asset.m  run_demo.m  run_live_camera_calibration.m  run_real_camera_follow.m  run_real_camera_follow_continuous.m  run_real_camera_ibvs.m  save_figure.m  session_controls.m  skew.m  square_corners.m  t1_virtual_calibration.m  t2_position_tracking.m  t3_ibvs_square.m
tests/: live_camera_smoke_test.m  real_camera_follow_continuous_smoke_test.m  real_camera_tracking_smoke_test.m  smoke_test.m
