[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-servo"
version = "0.1.0"
description = "MuJoCo vision servo with prompt-driven perception"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.10",
  "mujoco>=3.4",
  "Pillow>=10",
  "torch>=2.3",
]

[project.optional-dependencies]
open-vocab = [
  "transformers>=5.0",
  "torchvision>=0.18",
  "hydra-core>=1.3.2",
  "iopath>=0.1.10",
  "tqdm>=4.66.1",
]

[project.scripts]
mujoco-servo = "mujoco_servo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
