[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-servo"
version = "0.1.0"
description = "MuJoCo + Python visual servo tracking for Franka Panda"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.8",
  "mujoco>=3.4",
  "numpy>=2.0",
  "opencv-contrib-python>=4.10",
  "pillow>=10.0",
  "scipy>=1.12",
]

[project.optional-dependencies]
open-vocab = [
  "torch>=2.2",
  "transformers>=5.0",
  "torchvision>=0.17",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
mujoco-servo = "mujoco_servo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
