[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-servo"
version = "0.2.0"
description = "Self-contained MuJoCo visual-servo tracking demo"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "mujoco>=3.1",
  "opencv-python>=4.8",
]

[project.optional-dependencies]
semantic = [
  "torch>=2.3",
  "transformers>=4.51",
  "Pillow>=10",
]
test = [
  "pytest>=7.4",
]

[project.scripts]
mujoco-servo = "mujoco_servo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
